--- a/.github/workflows/kaizen.yml
+++ b/.github/workflows/kaizen.yml
@@ -19,5 +19,9 @@ jobs:
     - name: Echo hello
       run: echo hello
 
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.13'
+
     - name: List files
       run: ls -altr .
