--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,7 +24,7 @@ jobs:
 
       - name: Check if image exists using docker inspect
         id: check_image
-        run: docker inspect ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.extract_version.outputs.version }} > /dev/null && echo "exists=true" || echo "exists=false" >> $GITHUB_OUTPUT
+        run: docker inspect ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }} > /dev/null && echo "exists=true" || echo "exists=false" >> $GITHUB_OUTPUT
 
       - name: Login to GitHub Container Registry
         if: steps.check_image.outputs.exists == 'false'
@@ -41,4 +41,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ steps.extract_version.outputs.version }}
+          tags: ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }}
