--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -26,17 +27,16 @@ jobs:
         id: extract_version
         run: echo version=$(grep version pyproject.toml | head -n1 | cut -d '"' -f2) >> $GITHUB_OUTPUT
 
-      - name: Check if image exists using docker inspect
-        id: check_image
-        run: docker inspect ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }} > /dev/null && echo "exists=true" || echo "exists=false" >> $GITHUB_OUTPUT
-
       - name: Login to GitHub Container Registry
-        if: steps.check_image.outputs.exists == 'false'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Check if image exists using docker inspect
+        id: check_image
+        run: docker inspect ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }} > /dev/null && echo "exists=true" || echo "exists=false" >> $GITHUB_OUTPUT
 
       - name: Build and push
         if: steps.check_image.outputs.exists == 'false'
