--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Check if image exists using docker inspect
         id: check_image
-        run: docker inspect ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }} > /dev/null && echo "exists=true" || echo "exists=false" >> $GITHUB_OUTPUT
+        run: docker manifest inspect ghcr.io/${{ github.repository }}:${{ steps.extract_version.outputs.version }} > /dev/null && echo "exists=true" || echo "exists=false" >> $GITHUB_OUTPUT
 
       - name: Build and push
         if: steps.check_image.outputs.exists == 'false'
