--- a/.github/workflows/kaizen.yml
+++ b/.github/workflows/kaizen.yml
@@ -9,6 +9,7 @@ jobs:
 
     permissions:
       contents: write
+      pull-requests: write
 
     steps:
     - name: Checkout repository
@@ -19,4 +20,4 @@ jobs:
       with:
         openai-api-token: ${{ secrets.OPENAI_API_TOKEN }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        version: '0.1.0'
+        version: '0.1.2'
