Attempt to specify cmd.

--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'docker://ghcr.io/ethan42/kaizen:0.1.2'
+  cmd: ['poetry', 'run', '-C', '/app', 'main']
   env:
     OPENAI_API_TOKEN: ${{ inputs.openai-api-token }}
     GITHUB_TOKEN: ${{ inputs.github-token }}
