Improve installation + bump.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "kaizen"
 version = "0.1.3"
-description = ""
+description = "A tool for continuous improvement"
 authors = ["Thanassis Avgerinos <thanassis.avgerinos@gmail.com>"]
 readme = "README.md"
 
@@ -17,4 +17,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-main = "kaizen:main"
+kaizen = "kaizen:main"
