Switch to key instead of token.

--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,8 @@
 name: 'kaizen'
 description: 'Suggest small improvements continuously'
 inputs:
-  openai-api-token:
-    description: Token for using the OpenAI API
+  openai-api-key:
+    description: API key for using the OpenAI API
     required: true
   github-token:
     description: GitHub token for creating PRs
@@ -12,7 +12,7 @@ runs:
   using: 'docker'
   image: 'docker://ghcr.io/ethan42/kaizen:0.1.9'
   env:
-    OPENAI_API_TOKEN: ${{ inputs.openai-api-token }}
+    OPENAI_API_KEY: ${{ inputs.openai-api-key }}
     GITHUB_TOKEN: ${{ inputs.github-token }}
 branding:
   icon: "zap"
