--- a/.github/workflows/kaizen.yml
+++ b/.github/workflows/kaizen.yml
@@ -18,5 +18,5 @@ jobs:
     - name: Run kaizen
       uses: ethan42/kaizen@main
       with:
-        openai-api-token: ${{ secrets.OPENAI_API_TOKEN }}
+        openai-api-token: ${{ secrets.OPENAI_API_KEY }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
