--- a/.github/workflows/kaizen.yml
+++ b/.github/workflows/kaizen.yml
@@ -20,3 +20,4 @@ jobs:
       with:
         openai-api-key: ${{ secrets.OPENAI_API_KEY }}
         github-token: ${{ secrets.GITHUB_TOKEN }}
+        model: "gpt-4o"
