--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ version = "0.1.13"
 description = "A tool for continuous improvement"
 authors = ["Thanassis Avgerinos <thanassis.avgerinos@gmail.com>"]
 readme = "README.md"
+license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.10"
 gitpython = "^3.1.43"
 pygithub = "^2.5.0"
 neurosymbolic = "0.1.6"
-
 
 [build-system]
 requires = ["poetry-core"]
